Fixed wrong margin

--- a/main.css
+++ b/main.css
@@ -1,4 +1,4 @@
-* {box-sizing: border-box;margin: none;}
+* {box-sizing: border-box;margin: 0;}
 
 html {
     font-family: Arial, Helvetica, sans-serif;
